# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: project-check.yml
gendiff/: __init__.py  cli.py  diff.py  gen_diff.py  generate.py  generate_diff.py  parsing.py
gendiff/formaters/: __init__.py  formater.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_point.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: output.py
