[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Второй проект в курсе Хекслет - Вычислитель отличий"
authors = ["AnastasiaTimoshe <a.n.timoshevskaya@gmail.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.dev-dependencies]



[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
